listview chnage recyclerView!

--- a/app/src/main/res/layout/row_main.xml
+++ b/app/src/main/res/layout/row_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/ly_Row"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="15dp"
         android:paddingTop="15dp">
@@ -26,14 +26,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="Title"
-            android:textColor="@color/color_white"
+            android:textColor="@color/color_black"
             android:textSize="20dp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/ly_DynamicFileArea"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="100dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:orientation="vertical"
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Content"
-            android:textColor="@color/color_white"
+            android:textColor="@color/color_black"
             android:textSize="17dp"
             android:textStyle="normal" />
     </LinearLayout>
