recyclerView  set GridLayout

--- a/app/src/main/res/layout/row_main.xml
+++ b/app/src/main/res/layout/row_main.xml
@@ -1,24 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="100dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/ly_Row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="15dp"
-        android:paddingTop="15dp">
-
-        <TextView
-            android:id="@+id/tv_Date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:textColor="@color/color_black"
-            android:textSize="13dp"
-            android:textStyle="italic" />
+        >
 
         <TextView
             android:id="@+id/tv_Title"
@@ -30,30 +20,18 @@
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <LinearLayout
-            android:id="@+id/ly_DynamicFileArea"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <ImageView
-                android:id="@+id/iv_Attach"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop" />
-
-        </LinearLayout>
-
         <TextView
-            android:id="@+id/tv_Content"
+            android:id="@+id/tv_Date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Content"
+            android:gravity="right"
             android:textColor="@color/color_black"
-            android:textSize="17dp"
-            android:textStyle="normal" />
-    </LinearLayout>
+            android:textSize="13dp" />
+
+        <ImageView
+            android:scaleType="centerCrop"
+            android:id="@+id/iv_Attach"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 </LinearLayout>
