--- a/app/src/main/res/layout/act_write.xml
+++ b/app/src/main/res/layout/act_write.xml
@@ -31,6 +31,14 @@
                 android:textColor="#000000"
                 android:textSize="15dp" />
 
+            <LinearLayout
+                android:id="@+id/ly_DynamicSelectColor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
             <ImageView
                 android:id="@+id/iv_Attach"
                 android:layout_width="match_parent"
